--- a/Global Chess Rankings/chess.html
+++ b/Global Chess Rankings/chess.html
@@ -16,7 +16,7 @@
     <nav class="navbar">
         <div class="navbar-brand">
             <a href="chess.html" class="navbar-item">
-                <img src="https://images.chesscomfiles.com/uploads/v1/images_users/tiny_mce/SamCopeland/phpmeXx6V.png" alt="">
+                <img src="https://images.chesscomfiles.com/uploads/v1/images_users/tiny_mce/SamCopeland/phpmeXx6V.png" alt="" class="mr-2">
                 Global Chess Rankings
             </a>
         </div>
@@ -39,13 +39,19 @@
             </table>
         </div>
     </div>
+    <div class="pagination ml-3">
+        <nav class="pagination is-rounded" role="navigation">
+            <a class="pagination-previous" onclick="paginate(-10)">Previous</a>
+            <a class="pagination-next" onclick="paginate(10)">Next page</a>
+        </nav>
+    </div>
 </body>
 
 <script>
     let players = [
     {
             name: "Magnus Carlsen",
-            id: "1",
+            id: 1,
             classicalRating: "2859",
             rapidRating: "2834",
             blitzRating: "2830",
@@ -53,7 +59,7 @@
         },
         {
             name: "Ding Liren",
-            id: "2",
+            id: 2,
             classicalRating: "2811",
             rapidRating: "2829",
             blitzRating: "2788",
@@ -61,7 +67,7 @@
         },
         {
             name: "Ian Nepomniachtchi",
-            id: "3",
+            id: 3,
             classicalRating: "2793",
             rapidRating: "2766",
             blitzRating: "2781",
@@ -69,7 +75,7 @@
         },
         {
             name: "Alireza Firouzja ",
-            id: "4",
+            id: 4,
             classicalRating: "2785",
             rapidRating: "2745",
             blitzRating: "2903",
@@ -77,7 +83,7 @@
         },
         {
             name: "Hikaru Nakamura",
-            id: "5",
+            id: 5,
             classicalRating: "2768",
             rapidRating: "2806",
             blitzRating: "2909",
@@ -85,7 +91,7 @@
         },
         {
             name: "Fabiano Caruana",
-            id: "6",
+            id: 6,
             classicalRating: "2766",
             rapidRating: "2747",
             blitzRating: "2847",
@@ -93,7 +99,7 @@
         },
         {
             name: "Anish Giri",
-            id: "7",
+            id: 7,
             classicalRating: "2764",
             rapidRating: "2721",
             blitzRating: "2792",
@@ -101,7 +107,7 @@
         },
         {
             name: "Wesley So",
-            id: "8",
+            id: 7,
             classicalRating: "2760",
             rapidRating: "2787",
             blitzRating: "2763",
@@ -109,7 +115,7 @@
         },
         {
             name: "Viswanathan Anand",
-            id: "9",
+            id: 9,
             classicalRating: "2754",
             rapidRating: "2731",
             blitzRating: "2734",
@@ -117,7 +123,7 @@
         },
         {
             name: "Sergey Karjakin",
-            id: "10",
+            id: 10,
             classicalRating: "2747",
             rapidRating: "2736",
             blitzRating: "2647",
@@ -125,7 +131,7 @@
         },
         {
             name: "Teimour Radjabov",
-            id: "11",
+            id: 11,
             classicalRating: "2747",
             rapidRating: "2718",
             blitzRating: "2709",
@@ -133,7 +139,7 @@
         },
         {
             name: "Alexander Grischuk",
-            id: "12",
+            id: 12,
             classicalRating: "2745",
             rapidRating: "2759",
             blitzRating: "2847",
@@ -141,7 +147,7 @@
         },
         {
             name: "Leinier Dominguez Perez",
-            id: "13",
+            id: 13,
             classicalRating: "2743",
             rapidRating: "2703",
             blitzRating: "2708",
@@ -149,7 +155,7 @@
         },
         {
             name: "Shakhiyar Mamedyarov",
-            id: "14",
+            id: 14,
             classicalRating: "2741",
             rapidRating: "2747",
             blitzRating: "2734",
@@ -157,7 +163,7 @@
         },
         {
             name: "Richard Rapport",
-            id: "15",
+            id: 15,
             classicalRating: "2740",
             rapidRating: "2802",
             blitzRating: "2613",
@@ -165,7 +171,7 @@
         },
         {
             name: "Maxime Vachier-Lagrave",
-            id: "16",
+            id: 16,
             classicalRating: "2735",
             rapidRating: "2775",
             blitzRating: "2771",
@@ -173,7 +179,7 @@
         },
         {
             name: "Levon Aronian",
-            id: "17",
+            id: 17,
             classicalRating: "2735",
             rapidRating: "2720",
             blitzRating: "2809",
@@ -181,7 +187,7 @@
         },
         {
             name: "Jan-Krzysztof Duda",
-            id: "18",
+            id: 18,
             classicalRating: "2731",
             rapidRating: "2791",
             blitzRating: "2779",
@@ -189,7 +195,7 @@
         },
         {
             name: "Vidit Santosh Gujrathi",
-            id: "19",
+            id: 19,
             classicalRating: "2729",
             rapidRating: "2617",
             blitzRating: "2654",
@@ -197,7 +203,7 @@
         },
         {
             name: "Dmitry Andreikin",
-            id: "20",
+            id: 20,
             classicalRating: "2729",
             rapidRating: "2634",
             blitzRating: "2736",
@@ -206,6 +212,7 @@
     ];
 
     let playersString = JSON.stringify(players);
+    // let data = localStorage.setItem("data", playersString)
     let data = JSON.parse(localStorage.getItem("data"))
 
     if(localStorage.getItem("data")!=playersString){
@@ -215,57 +222,83 @@
         data = JSON.parse(localStorage.getItem("data"));
     }
 
+    let seenID = ["0"]
+    
+    let seenString = JSON.stringify(seenID);
+    let seen = JSON.parse(localStorage.getItem("seen"))
+
+    if(localStorage.getItem("seen")!=seenString){
+        seen = JSON.parse(localStorage.getItem("seen"))
+    }else{
+        localStorage.setItem("seen", seenString);
+        seen = JSON.parse(localStorage.getItem("seen"));
+    }
+
+    let page = 10;
+
     sort('classicalRating')
+
+    function paginate(num){
+        page += num
+        if(page<10){
+            page = 10;
+        }else if(page > data.length){
+            page = data.length
+            page = page - page%10
+            page += 10
+        }
+        createTable(data)
+    }
 
     function createTable(data){
         let tableBody = document.querySelector('tbody');
-        let i = 0;
-        data.forEach(player => {
+        tableBody.replaceChildren();
+        for(let j = page-10; j<page; j++){
             const row = document.createElement('tr');
             let cell = document.createElement('td');
             let link = document.createElement('a');
             cell = document.createElement('td');
-            cell.textContent = i+1;
+            cell.textContent = j+1;
             row.appendChild(cell);
+            
             cell = document.createElement('td');
-            link.href = 'players.html?id=' + player.id;
-            link.textContent = player.name;
+            link.href = 'players.html?id=' + data[j].id;
+            link.textContent = data[j].name;
             cell.appendChild(link);
             row.appendChild(cell);
             cell = document.createElement('td');
-            cell.textContent = player.classicalRating;
+            cell.textContent = data[j].classicalRating;
             row.appendChild(cell);
             cell = document.createElement('td');
-            cell.textContent = player.rapidRating;
+            cell.textContent = data[j].rapidRating;
             row.appendChild(cell);
             cell = document.createElement('td');
-            cell.textContent = player.blitzRating;
+            cell.textContent = data[j].blitzRating;
             row.appendChild(cell);
             tableBody.appendChild(row);
-            i++
-        });
+        }
     }
 
     function sort(prop){
         let tableBody = document.querySelector('tbody');
         tableBody.replaceChildren();
         let store = "";
-        for(let j = 0; j<30; j++){
+        for(let j = 0; j<data.length+5; j++){
             for(let i = 0; i<data.length-1; i++){
-            let currentElement = data[i];
-            let nextElement = data[i+1];
-            if(prop === 'name'){
-                if(currentElement[prop] > nextElement[prop]){
+                let currentElement = data[i];
+                let nextElement = data[i+1];
+                if(prop === 'name'){
+                    if(currentElement[prop] > nextElement[prop]){
+                        store = currentElement;
+                        data[i] = data[i+1];
+                        data[i+1] = store;
+                    }
+                }else if(currentElement[prop] < nextElement[prop]){
                     store = currentElement;
                     data[i] = data[i+1];
                     data[i+1] = store;
                 }
-            }else if(currentElement[prop] < nextElement[prop]){
-                store = currentElement;
-                data[i] = data[i+1];
-                data[i+1] = store;
             }
-        }
         }
         createTable(data);
     }
